--- a/Part 4. Database/Quest 14. Hello, MySQL/package.json
+++ b/Part 4. Database/Quest 14. Hello, MySQL/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "express": "*",
+    "mysql": "^2.13.0",
     "sequelize": "^3.30.2",
     "sequelize-cli": "^2.5.1",
     "sqlite3": "^3.1.8"
