--- a/Part 4. Database/Quest 14. Hello, MySQL/package.json
+++ b/Part 4. Database/Quest 14. Hello, MySQL/package.json
@@ -1,7 +1,16 @@
 {
+  "name": "notepad-woong",
+  "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "start": "DEBUG=express-sequelize node ./bin/www"
+  },
   "dependencies": {
+    "body-parser": "^1.16.1",
+    "cookie-parser": "^1.4.3",
     "express": "*",
+    "express-sequelize": "0.0.4",
+    "express-session": "^1.15.1",
     "mysql": "^2.13.0",
     "sequelize": "^3.30.2",
     "sequelize-cli": "^2.5.1",
