Implement simulatneous update of canvas(Quest18)

--- a/Part 5. Modern web/Quest 18. WebSocket/package.json
+++ b/Part 5. Modern web/Quest 18. WebSocket/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "octicons": "^5.0.1",
     "socket.io": "^1.7.3"
